# codeleap_backend_test

./: .dockerignore  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml
src/config/: apps.py  asgi.py  database.py  i18n.py  security.py  settings.py  static.py  templates.py  urls.py  wsgi.py
src/posts/: admin.py  models.py  serializers.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py  0002_comment_like.py  0003_alter_like_options_alter_like_unique_together_and_more.py  0004_alter_like_unique_like_per_user_per_post.py
src/posts/models/: __init__.py  base.py  comment.py  like.py  post.py
